2004-08-06 Bernie Solomon <bernard@Ugsolutions.com>

	* Dll1.vb:
	* Import1.vb: test importing a DLL with a byref arg
	* Makefile: build support DLLs
	* Test.Sources: add new test

2004-08-06 Sachin Kumar <skumar1@novell.com>
	* ArithmeticOperators.vb:
	* ArithmeticOperators1.vb:
	* ArithmeticOperators2.vb:
	* ArithmeticOperators3.vb:
	* ArithmeticOperatorsA.vb:
	* ArithmeticOperatorsC1.vb:
	* ArithmeticOperatorsC2.vb:
	* LikeOperator.vb:
	* LikeOperator1.vb:
	* LikeOperatorA.vb:
	* LikeOperatorC1.vb:
	* RelationalOperators1.vb:
	* RelationalOperatorsC1.vb:
	* Test.Sources: Included newly added operators tests	
	
2004-08-06  Jambunathan K  <kjambunathan@novell.com>
	* Makefile: Added 'mkdir -p $$logpath'

2004-08-05 Sachin Kumar <skumar1@novell.com>
	* ConcatenationOperator.vb:
	* ConcatenationOperatorC1.vb:
	* LogicalOperators1.vb:
	* LogicalOperatorsA.vb:
	* LogicalOperatorsC1.vb:
	* LogicalOperatorsC2.vb:
	* LogicalOperatorsC3.vb:
	* ShiftOperators1.vb:
	* ShiftOperatorsA.vb:
	* ShiftOperatorsC1.vb:
	* ShiftOperatorsC2.vb:
	* Test.Sources: Included newly added tests

2004-08-05 Anirban Bhattacharjee <banirban@novell.com>
	* InterfaceH.vb: New test case

2004-08-05 Anirban Bhattacharjee <banirban@novell.com>
	* InterfaceA.vb: Test now covers all Interface members.

2004-08-04  Jambunathan K  <kjambunathan@novell.com>
	* RegionDirectivesC5.vb: 
	* ConditionalCompilation9.vb: 
	* ConditionalCompilation10.vb: Removed all these redundant test 
	  cases

	* Test.Sources: Included the newly added pre-processor test cases

2004-08-04 Sachin Kumar <skumar1@novell.com>
	* Makefile: Create clean set of test results log files
	* Readme: Updated readme appropriately.

2004-08-03  Jambunathan K  <kjambunathan@novell.com>
	* Readme: Reworded and Reformatted.

2004-08-01 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* LabelA.vb, LabelB.vb, LabelC.vb, LabelD.vb : new positive tests for labelled statements

2004-07-30  Jambunathan K  <kjambunathan@novell.com>